<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingStart="20dp"
    android:paddingTop="4dp"
    android:paddingEnd="20dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipment_status_normal"
                android:textColor="@color/equipment_status_ok"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/equipment_status_attention"
                android:textColor="@color/equipment_status_warning"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/equipment_status_alert"
                android:textColor="@color/equipment_status_error"
                android:textSize="11sp" />
        </LinearLayout>

        <include
            android:id="@+id/bluetoothEquipmentStatusRow"
            layout="@layout/view_equipment_status_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/loadCellEquipmentStatusRow"
            layout="@layout/view_equipment_status_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" />

        <include
            android:id="@+id/humidityEquipmentStatusRow"
            layout="@layout/view_equipment_status_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" />

        <include
            android:id="@+id/cameraEquipmentStatusRow"
            layout="@layout/view_equipment_status_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" />

        <include
            android:id="@+id/motorEquipmentStatusRow"
            layout="@layout/view_equipment_status_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
